# ChangeLog for sys-kernel/linux-headers
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.318 2011/03/13 20:35:26 maekke Exp $

  13 Mar 2011; Markus Meier <maekke@gentoo.org> linux-headers-2.6.36.1.ebuild:
  arm stable, bug #352335

  19 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  linux-headers-2.6.36.1.ebuild:
  ppc/ppc64 stable wrt #352335

  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  linux-headers-2.6.36.1.ebuild:
  Stable on amd64 wrt bug #352335

  15 Feb 2011; Thomas Kahle <tomka@gentoo.org> linux-headers-2.6.36.1.ebuild:
  x86 stable per bug 352335

*linux-headers-2.6.36.1 (24 Nov 2010)

  24 Nov 2010; Mike Frysinger <vapier@gentoo.org>
  +linux-headers-2.6.36.1.ebuild:
  Add files for mips and update to 2.6.36.1 #346591 by Matt Turner.

*linux-headers-2.6.36 (22 Nov 2010)

  22 Nov 2010; Mike Frysinger <vapier@gentoo.org>
  +linux-headers-2.6.36.ebuild:
  Version bump.

  22 Nov 2010; Mike Frysinger <vapier@gentoo.org>
  linux-headers-2.6.35.ebuild:
  Add fix from upstream for make-3.82 and powerpc targets #342841 by Ian
  Johnson.

*linux-headers-2.6.35 (23 Aug 2010)

  23 Aug 2010; Mike Frysinger <vapier@gentoo.org> +linux-headers-2.6.35.ebuild:
  Version bump.

  23 Aug 2010; Mike Frysinger <vapier@gentoo.org>
  linux-headers-2.6.30-r1.ebuild:
  Mark s390 stable #273358 by Theo Chatzimichos.

  08 Aug 2010; Tobias Klausmann <klausman@gentoo.org>
  linux-headers-2.6.33.ebuild:
  Stable on alpha, so udev works

  12 Jun 2010; Joseph Jezak <josejx@gentoo.org> linux-headers-2.6.34.ebuild:
  Marked -ppc/-ppc64 due to bug #323435.

*linux-headers-2.6.34 (09 Jun 2010)

  09 Jun 2010; Mike Frysinger <vapier@gentoo.org>
  +linux-headers-2.6.34.ebuild:
  Version bump.

  22 May 2010; Raúl Porcel <armin76@gentoo.org>
  linux-headers-2.6.30-r1.ebuild:
  sh stable

  12 Apr 2010; Raúl Porcel <armin76@gentoo.org>
  linux-headers-2.6.30-r1.ebuild: