@@ -1,21 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST gentoo-headers-2.4.33-1.tar.bz2 11542 RMD160 bce638fe62012cf686f3e12432c363be578b5f57 SHA1 a0550e02081622aab01d0a9925bd5eb6ca61c15e SHA256 a1517b0ea6619f018d0dfbb7457be122a0f80b5e76b995fdedaa9423951fb37d
 DIST gentoo-headers-2.4.36-1.tar.lzma 10846 RMD160 37fd84f716dbaec65c6c4bc5a30d218e4a302311 SHA1 e8d6101edd04c658a27fdd849324065e403c4510 SHA256 2120f941e11dde038a8ad3cf47ce4f6eb4b5cba3fa59a378113c4cf57544509d
 DIST gentoo-headers-2.6.27-2.tar.lzma 8548 RMD160 48c5b98a12a9830be7cfcc5f993807b51c6c5434 SHA1 d9052b14536693cd63b415a0f040ab1832801be9 SHA256 a6dcb5cd6e652d4b09a91ce1bba02ab8a9c4faf3341f0ea0295d9048063aa3be
 DIST gentoo-headers-2.6.30-2.tar.lzma 9119 RMD160 df00b75029cd8b98ae8631b0b42fceda54c5ab4c SHA1 2a33a8714f00087e284a8e0aed9fd33898343694 SHA256 a4b832453e3681f2a44d58b7cb8c56876a34598eaf0a88ebcfba1d3e989a4811
 DIST gentoo-headers-2.6.33-1.tar.lzma 9219 RMD160 a236c5f70989c0a9c3329790f08a3aa6e6d629bd SHA1 31f8e1d67d980d86cdffcd552d4469430ebfb92c SHA256 d5fa57752df6f62f5379481f7f44c8544b86f07af898b8cc0f36c12ec558043e
-DIST gentoo-headers-2.6.34-1.tar.lzma 8945 RMD160 1daaba0413b563c4b604e68ac22aed3853d2632f SHA1 c663bd0556350f476f821dbcb4f866e407aa2940 SHA256 30ecb900b9e948b4c1e63b856c6352fa46494152343e33b59b51c055d9ac58c4
-DIST gentoo-headers-2.6.35-2.tar.xz 5432 RMD160 b514c976cea41ed2b0ac962f4879d645c1ec9d3c SHA1 1f73167d96d7517fe2ab002a26ee404672ca8d6e SHA256 a10ae3235af89df0705834c54eb49e451314f79400e06395d009c16686c725b4
 DIST gentoo-headers-2.6.36-1.tar.xz 5032 RMD160 543bb84c17668a67e0f56c314eff7cd74333cff3 SHA1 d74ee20e1ed0efe0311e8a673b8549f60b334dbd SHA256 053be8c1fbd72e2f0cd5baed8f057652e0e8506fff882605606b7fa2c119c5ba
+DIST gentoo-headers-2.6.38-1.tar.xz 3992 RMD160 50921db8cde371d89d3df75f8ffa681570c49a4f SHA1 9c5801dc9634e5693d43357fa1f07c28c26816e8 SHA256 0d38cffc99b9279337ca0f2b789a8db2f73ba856c668998e497aa4d7cc004924
 DIST gentoo-headers-base-2.6.27.tar.lzma 3584132 RMD160 824b540cfa897b6b63a22bc3179f29b15c66d835 SHA1 05d7e26b4bc0cf80481f289e8263834b202ec573 SHA256 c86343d77613555760871838608bdf08429e48f96e261039e206de4411546437
 DIST gentoo-headers-base-2.6.30.tar.lzma 3861176 RMD160 a43c85ceaadd9b06d8b50962a3e965bd5ce2a226 SHA1 aa1624d161c7c58ebdbde9d2e1a2695f45835c74 SHA256 8201ae0871b561a6c309d2be365204744a0412086c1b1664e748fd1338127f2f
 DIST gentoo-headers-base-2.6.33.tar.lzma 4248910 RMD160 142c31de9d99b175770bc2eb6d1909532989daff SHA1 3de62655fa9108df7a1c969c0e2bcbc000dae71b SHA256 9e9284b45c754996808d9eeeacf7af756e3622c3778c0e0d9e26a929ca589c50
-DIST gentoo-headers-base-2.6.34.tar.lzma 4305516 RMD160 4a9186caa163689ad1560cc57cf233de3a15574b SHA1 421d6e3d50b9cb35714989c5c26d7cccd07d4f2b SHA256 a3ab5df74994906ab5cad76a46b5b5be6ecb6a0d7ba4c912795eb97b6bb56eb2
-DIST gentoo-headers-base-2.6.35.tar.xz 4361756 RMD160 c35b0ff15bb2c0668615703b797919271fca2c11 SHA1 a0e8c4da0b46455e0e98a50e178ffccd7b9fd117 SHA256 089cf370445746b56496a980dd138ad312e353085c01e2ca988882f44f710657
 DIST gentoo-headers-base-2.6.36.1.tar.xz 4482596 RMD160 bc67c50f982cea140816cb1f858519c9783a135f SHA1 0832fb74dd94c4614de44ce055031f94be45dacb SHA256 fed2ee529d4d48d5d6825fe85a3a2529b622abacfd31c2c391c0777db86696ff
-DIST gentoo-headers-base-2.6.36.tar.xz 4478364 RMD160 4890832c79595c33d322baac437eccb1a88ee90b SHA1 5044bd0ca2616a61818c0d886c8a902707fa13ec SHA256 14153ca8240d49ab27f654c07c53d5b245d01218caea10533c58d4063c7fa1ad
+DIST gentoo-headers-base-2.6.38.tar.xz 4614324 RMD160 6368d5782143e30d955366ca0edc8f9fb4934af6 SHA1 72ac6065d9d5fb367858d08760e12da2584a30f6 SHA256 31c9de033a155812302290c3cbfb5d9cf5e8755598f0440ed859a0138740a7bf
 DIST linux-2.4.33.tar.bz2 31161078 RMD160 6acdabafecfdc69f3f5b0203eac154ac1c39c44b SHA1 ea444013d54ead1ed366180e9d18d52fbbbe5c6b SHA256 a1d8403a72dbe7a4d63986e71e22e6eeb32fe2e2e949f40c3f9f3bb6496ee47a
 DIST linux-2.4.36.tar.bz2 31105810 RMD160 edc378f091a676ddb271239a04dc58973c4077b7 SHA1 a767e2cc65a7aedc21a3a3d6a07a7709509c85e8 SHA256 c771c8e1db86eda01f047e4f23b48da748f31a82c9501e2c9af4b1acbee8a9e7
 DIST patch-2.4.33.3.bz2 6069 RMD160 dba22420a3c3445042f1193475718fdf4c5a6c3d SHA1 22f8493026ee1a191cae073cb94ee2b037ca575c SHA256 926223533c33791770a8ae134d731aa3f98b67a2b5676426ea74a1a888eb5a7b
@@ -24,16 +21,14 @@ EBUILD linux-headers-2.4.36.ebuild 610 RMD160 b7460f982042adb0a14748967b3dbf0050
 EBUILD linux-headers-2.6.27-r2.ebuild 1464 RMD160 56c3731022fa959f4bd625c737ddda811f880633 SHA1 0bef4d2d101fc4e6b85b4e1fd8102b26c7d1243e SHA256 157e37458d29dc7a52ba6fccdfae04a45186da6ee4fdec5cf4072bec116c24a3
 EBUILD linux-headers-2.6.30-r1.ebuild 1475 RMD160 3976fd44264c0e09aea95b13a613d36f7b98a80b SHA1 e54f783196d1297edbcdb3856277b8b4245ca81c SHA256 cec57844e733fef70c5c8f5b3f956dc19ef83be8d18a9e31ecd0bd100bcef567
 EBUILD linux-headers-2.6.33.ebuild 1413 RMD160 a988105ed3ddba208b731bd0255366d060bcc3fb SHA1 f1c3b4e691793eef357b9b30137adde9bd6d1fae SHA256 e83ee05994ab707bf816d111f86a1b263e60b3829f2df578cbf86cfd0c688a43
-EBUILD linux-headers-2.6.34.ebuild 1412 RMD160 37b6aefb59e2218b7c830ecff571a80ad92f8374 SHA1 1ffbb56ee5a7060358a8b976fa5df569bef20b48 SHA256 3c79073670e14ef0beebb34810309b8bb4f22b8920a32f715e9d59c974c5cace
-EBUILD linux-headers-2.6.35.ebuild 1388 RMD160 04099b9b82e49f0bb748637c24a84776bd9b7ab7 SHA1 2733bda19c15968a68d306b44d38a6f1cf2faab5 SHA256 df1dd4140ade00b3300a6519529c4918ab8803efd5ab32a17ec3862b8bdc7e9d
 EBUILD linux-headers-2.6.36.1.ebuild 1391 RMD160 4001968ab66c009ee523eaa66b09f75ec4ae0fae SHA1 e9849f705ff11450528098d316b0f84ba2dfc9f8 SHA256 9af5b9022aacbccb9f193a80be570b93c472f869483e41ef0361fa21b8fe10af
-EBUILD linux-headers-2.6.36.ebuild 1388 RMD160 95c629b379ad59410475c1a899cfb14d16bd2fc8 SHA1 e77bd33f3674b6b469e69e69c5fbd7236df1d753 SHA256 e99ae8a85aceeb0cae130c9b325f350324b3815c0173b8104c0abc90fec3d98b
-MISC ChangeLog 53490 RMD160 751af0c0e5fdc9112ec757a12c823cdff71a2f9e SHA1 215f86cbb03491f966e751161f8cefd063ef4057 SHA256 0b3937451e37e5b41985fd2603f317a4286b46f13ff25eaa8386ab82f194e1ce
+EBUILD linux-headers-2.6.38.ebuild 1394 RMD160 569a7be9575a1b5c675564fb4724ccf86dd08642 SHA1 29649b12ba68a956818ccc9796fcf5fa27bc6d96 SHA256 93c97a9494564ccc6942b45be8e69786658ed44872c056a67d5f8452d0f02cf8
+MISC ChangeLog 53624 RMD160 4b63f8bb75dae68d3e5359ee12347ea24bbba68a SHA1 1e8c216769b389a07ec81072e3f4fba97d40a900 SHA256 4d93439f17ce2543330ae55be14e194d747239c11ddb109b8dafd99d923b9314
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk19Kr8ACgkQkKaRLQcq0GIIrwCfc3Qz/KFSijIECTqgWiq7MUrF
-yU8AnArWJVhz2g670VqEtTmH5Xruc8cM
-=xRu2
+iF4EAREIAAYFAk2DtzIACgkQaC/OocHi7JYRNQD9FxyW5R4zCncZzqaqHp/SE28F
+6y8HZU4Dwou1Vz9JSzIBAILXaVdWDPic49lfUxPMdWjbOgpLkDTTDDVThaQS8lT8
+=J2DO
 -----END PGP SIGNATURE-----
